--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
     "prisma": "^3.15.2"
   }
