--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "db-migrate": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "Roland-Sankara",
